2009-03-04  Badlop  <badlop@process-one.net>

	* src/mod_caps.erl: Fix two small compilation errors

2009-03-04  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: Add roster subscriptions handling
	so on_sub_and_presence if fully supported.

	* src/mod_pubsub/mod_pubsub.erl: Allow to send PEP events to all
	connected ressources, even via s2s.
	* src/mod_caps.erl: Likewise

2009-03-03  Badlop  <badlop@process-one.net>

	* src/ejabberd_listener.erl: Fix report message of 'undef' error

	* src/ejabberd_listener.erl: Fix a minor compilation warning and
	add EDoc comment

	* src/ejabberd_listener.erl: When stopping a listener, don't stop
	the listener supervisor (EJAB-874)

	* src/ejabberd_listener.erl: More error detections

	* src/ejabberd_config.erl: Check certfiles are readable on server
	start and listener start (EJAB-753)
	* src/ejabberd_listener.erl: Likewise

	* src/ejabberd_listener.erl: Report error at startup if a listener
	module isn't available or is not an ejabberd listener (EJAB-868)

	* src/mod_privacy.erl: Privacy List: deny presence-out all + send
	presence to: presence is sent (EJAB-255)
	* src/ejabberd_c2s.erl: Likewise

	* src/mod_privacy.erl: Only run roster_get_jid_info if privacy
	list has subscription or group (thanks to George Hazan)(EJAB-851).
	Sort items in privacy list by order before storing (EJAB-848)
	* src/mod_privacy.hrl: Likewise
	* src/mod_privacy_odbc.erl: Likewise

	* src/mod_muc/mod_muc_room.erl: Owner of a password protected room
	must provide the password, like other participants (EJAB-867)

	* src/mod_muc/mod_muc_log.erl: Prevent XSS in MUC logs by
	linkifying only a few known protocols (EJAB-850)

	* src/mod_muc/mod_muc.erl: Export function to create MUC
	room (thanks to Eric Cestari) (EJAB-729)

	* src/mod_roster.erl: When account is deleted, cancel presence
	subscription for all roster items (EJAB-790)
	* src/mod_roster_odbc.erl: Likewise
